migrate to java 11 and spring boot 2.x